# spotify_summary

./: README.md  app.py  main.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: update_data.yml
.streamlit/: config.toml
dashboard/: components.py  config.py  data_loader.py  errors.py  themes.py  utils.py  visualizations.py
dashboard/static/: style.css
dashboard/tabs/: __init__.py  artists.py  overview.py  patterns.py  songs.py
notebooks/: analysis.ipynb  visualization.ipynb
scripts/: fetch_data.py  process_data.py
src/: data_to_csv.py  main.ipynb  visualization.ipynb
